--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,5 @@
 Tim Becker (tim@kuriositaet.de)
 Slava Kravchenko (cordawyn@gmail.com)
 Tonni Aagesen (https://github.com/ta)
+Emil Petkov (https://github.com/emilpetkov)
+
