--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,12 @@
+0.1.6
+==========
+  Fixes, Cleanup, New custom bitmaps (BM 44, BM 60, BM 62)
+0.1.5
+==========
+  Hexmap support, string to id mapping
+0.1.4
+==========
+  New subfield classes, utility handling, codes
 0.1.3
 ==========
   bugfix, field definitions not duplicated
