--- a/TODO
+++ b/TODO
@@ -1,3 +1,6 @@
+* fix some tests, refactor some of the "Java" code inside
+
+* better class organization, especially for subfields, and related
 
 * mti_required : or something of the sort to indicate which fields are
      required/mirrored/conditional for each message type
