--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+0.1.7
+==========
+  Minor fixes in card brands and BM 44
 0.1.6
 ==========
   Fixes, Cleanup, New custom bitmaps (BM 44, BM 60, BM 62)
