--- a/TODO
+++ b/TODO
@@ -1,4 +1,7 @@
-* fix some tests, refactor some of the "Java" code inside
+* Use Test::Unit to spec behavior, there are worrying, totally
+  untested parts and methods/classes of critical nature
+
+* refactor some of the "Java" code inside
 
 * better class organization, especially for subfields, and related
 
