feature/f2016122701-paynetics-acquirer-integration
Updated version with latest changes

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+0.2.5
+==========
+  Added support for Merchant reference number in BMP 60.35
 0.2.4
 ==========
   Added support for Merchant Verification Value (MVV) in BM 62.20
@@ -42,10 +45,10 @@
   Dropped support for BM60.92, scheme reference data
 0.1.10
 ==========
-  Updated bins mapping on new latest ExactBins DB 
+  Updated bins mapping on new latest ExactBins DB
 0.1.9
 ==========
-  Added some Maestro bins to the bins mapping 
+  Added some Maestro bins to the bins mapping
 0.1.8
 ==========
   Added 2 series bin for Mastercard
