f2018032303-processing_requirements_for_SDWT
Updated the changelog file

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+0.3.0
+==========
+  Added support for Staged Digital Wallet Transaction in BMP 61.18
 0.2.5
 ==========
   Added support for Merchant reference number in BMP 60.35
