--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+0.3.1
+==========
+  Fixed order in BM 44 subfield. Numbered all subfields for better reference.
 0.3.0
 ==========
   Added support for Staged Digital Wallet Transaction in BMP 61.18
