--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+0.3.2
+==========
+  Updates the bin lists
 0.3.1
 ==========
   Fixed order in BM 44 subfield. Numbered all subfields for better reference.
