--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+0.3.3
+==========
+  Added support for Merchant Initiated Transaction Indicator in BMP 60.50
 0.3.2
 ==========
   Updates the bin lists
