--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+0.3.5
+==========
+  Renamed staged_digital_wallet_transaction to related_transaction_data for BMP 61.18
 0.3.4
 ==========
   Added support for COF Indicator in BMP 60.49
