--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+0.3.6
+==========
+  Added support for Unique Transaction Identifier in BMP 61.41
 0.3.5
 ==========
   Renamed staged_digital_wallet_transaction to related_transaction_data for BMP 61.18
