f2016101302-update_iso_lib_by_exact_bins
Updated bins matcher by new exactbins file

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+0.4.4
+==========
+  Updates the bin lists
+0.4.3
+==========
+  Updates the bin lists
 0.4.2
 ==========
   Added support for disable sequence number check option in BMP 60.87.01 for Paynetics
