--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+0.4.3
+==========
+  Updates the bin lists
 0.4.2
 ==========
   Added support for disable sequence number check option in BMP 60.87.01 for Paynetics
